--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="text">
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">@color/blue</item>
+    </style>
+    <style name="rate">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/lightblue</item>
+    </style>
+
     <style name="btn" parent="Theme.AppCompat.Light">
         <item name="android:background">@drawable/button</item>
         <item name="android:textColor">@color/white</item>
